--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Zeo's homepage
-description: Hello? Are we live already?
+description: Hello? World? Are we live already?
