--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
-theme: jekyll-theme-minimal
+# theme: jekyll-theme-minimal
+remote_theme: jekyll-klise
 title: Zeo's homepage
 description: Hello? World? Are we live already?
